--- a/playlist.html
+++ b/playlist.html
@@ -302,7 +302,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Caminho no Deserto</h4>
               <h5>Soraya Moraes</h5>
               <div class="music-meta-data">
@@ -323,7 +323,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Canção do Apocalipse</h4>
               <h5>Diante do Trono</h5>
               <div class="music-meta-data">
@@ -344,7 +344,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Céu e Terra se Encontram</h4>
               <h5>Davi Fernandes Cultura do Céu</h5>
               <div class="music-meta-data">
@@ -365,7 +365,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Céus abertos</h4>
               <h5>Lucas Rosa feat. Leticia Rosa</h5>
               <div class="music-meta-data">
@@ -386,7 +386,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Contar Meus Segredos</h4>
               <h5>Aline Barros</h5>
               <div class="music-meta-data">
@@ -411,7 +411,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Desenvolvendo Amor</h4>
               <h5>Morada</h5>
               <div class="music-meta-data">
@@ -432,7 +432,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Desperta</h4>
               <h5>Gabriela Rocha</h5>
               <div class="music-meta-data">
@@ -453,7 +453,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Digno de glória</h4>
               <h5>Soraya Moraes</h5>
               <div class="music-meta-data">
@@ -474,7 +474,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Digno é o Senhor</h4>
               <h5>Aline Barros</h5>
               <div class="music-meta-data">
@@ -499,7 +499,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>É Real</h4>
               <h5>Rio da Adoração</h5>
               <div class="music-meta-data">
@@ -520,7 +520,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Em Teus Braços</h4>
               <h5>Laura Souguellis</h5>
               <div class="music-meta-data">
@@ -541,7 +541,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Em Tua Presença</h4>
               <h5>Nívea Soares</h5>
               <div class="music-meta-data">
@@ -562,7 +562,7 @@
                     <div class="play-button"></div> 
                   </div>
               </div>
-              <div class="poca-music-content text-center">
+              <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
                 <h4>Enche-me Deus</h4>
                 <h5>Tasha Cobbs</h5>
                 <div class="music-meta-data">
@@ -583,7 +583,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Enche Este Lugar</h4>
               <h5>David Quinlan</h5>
               <div class="music-meta-data">
@@ -604,7 +604,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Estas Comigo</h4>
               <h5>Gabriela Rocha</h5>
               <div class="music-meta-data">
@@ -625,7 +625,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Eu Canto</h4>
               <h5>Diante do Trono</h5>
               <div class="music-meta-data">
@@ -646,7 +646,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Eu Era Órfão</h4>
               <h5>Cia. SALT</h5>
               <div class="music-meta-data">
@@ -667,7 +667,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Eu Navegarei</h4>
               <h5>Gabriela Rocha</h5>
               <div class="music-meta-data">
@@ -688,7 +688,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Eu Só Quero Tua Presença</h4>
               <h5>Theo Rubia</h5>
               <div class="music-meta-data">
@@ -713,7 +713,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Filho do Deus Vivo</h4>
               <h5>Nivea Soares</h5>
               <div class="music-meta-data">
@@ -738,7 +738,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Grande é o Senhor</h4>
               <h5>Adhemar Campos Nivea Soares</h5>
               <div class="music-meta-data">
@@ -763,7 +763,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Jesus é o Caminho</h4>
               <h5>Heloisa Rosa</h5>
               <div class="music-meta-data">
@@ -788,7 +788,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Lugar Secreto</h4>
               <h5>Gabriela Rocha</h5>
               <div class="music-meta-data">
@@ -813,7 +813,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Maranata</h4>
               <h5>Avivah Feat. Fernanda Madaloni</h5>
               <div class="music-meta-data">
@@ -834,7 +834,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Maravilhosa Graça</h4>
               <h5>Phil Wickham</h5>
               <div class="music-meta-data">
@@ -855,7 +855,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Muralhas</h4>
               <h5>Andre Valadão</h5>
               <div class="music-meta-data">
@@ -880,7 +880,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Não há outro lugar</h4>
               <h5>Central 3</h5>
               <div class="music-meta-data">
@@ -901,7 +901,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Não Seremos Abalados</h4>
               <h5>Nivea Soares</h5>
               <div class="music-meta-data">
@@ -922,7 +922,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Nosso Deus</h4>
               <h5>Revolução Music + Nívea Soares</h5>
               <div class="music-meta-data">
@@ -943,7 +943,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Nunca Me Abandonou</h4>
               <h5>Nova geração</h5>
               <div class="music-meta-data">
@@ -968,7 +968,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Oceanos (Oceans)</h4>
               <h5>Hillsong United</h5>
               <div class="music-meta-data">
@@ -989,7 +989,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>O Grande Eu Sou</h4>
               <h5>Central Music</h5>
               <div class="music-meta-data">
@@ -1010,7 +1010,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>O Grito</h4>
               <h5>Ministério Pedras Vivas</h5>
               <div class="music-meta-data">
@@ -1035,7 +1035,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Para Ti eu vou</h4>
               <h5>Central 3</h5>
               <div class="music-meta-data">
@@ -1056,7 +1056,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Pra Onde Eu Irei?</h4>
               <h5>Morada</h5>
               <div class="music-meta-data">
@@ -1077,7 +1077,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Pra Sempre</h4>
               <h5>Kari Jobe</h5>
               <div class="music-meta-data">
@@ -1102,7 +1102,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Quebrantado</h4>
               <h5>Vineyard</h5>
               <div class="music-meta-data">
@@ -1123,7 +1123,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Que Ele Cresça</h4>
               <h5>Deigma Marques</h5>
               <div class="music-meta-data">
@@ -1148,7 +1148,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Rendido Estou</h4>
               <h5>Aline Barros</h5>
               <div class="music-meta-data">
@@ -1173,7 +1173,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Santo</h4>
               <h5>Livres Para Adorar</h5>
               <div class="music-meta-data">
@@ -1194,7 +1194,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Santo Espírito</h4>
               <h5>Laura Souguellis</h5>
               <div class="music-meta-data">
@@ -1215,7 +1215,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Sou Casa</h4>
               <h5>Klebson Kollins</h5>
               <div class="music-meta-data">
@@ -1236,7 +1236,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Sua Justiça Prevalecerá</h4>
               <h5>Nivea Soares</h5>
               <div class="music-meta-data">
@@ -1257,7 +1257,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Só Tu És Santo</h4>
               <h5>Morada</h5>
               <div class="music-meta-data">
@@ -1282,7 +1282,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Teu amor não falha</h4>
               <h5>Nívea Soares</h5>
               <div class="music-meta-data">
@@ -1303,7 +1303,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Teu Reino</h4>
               <h5>Cristo Vivo</h5>
               <div class="music-meta-data">
@@ -1324,7 +1324,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Tu És Adorado</h4>
               <h5>Antonio Cirilo</h5>
               <div class="music-meta-data">
@@ -1345,7 +1345,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Tudo a Ver Com Ele</h4>
               <h5>Central 3</h5>
               <div class="music-meta-data">
