--- a/playlist.html
+++ b/playlist.html
@@ -89,34 +89,11 @@
       </div>
     </div>
   </div>
-  <!-- <div class="breadcumb--con">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="index.html"><i class="fa fa-home"></i> Inicio</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Playlist</li>
-            </ol>
-          </nav>
-        </div>
-      </div>
-    </div>
-  </div> -->
   <!-- ***** Breadcrumb Area End ***** -->
   
   <!-- ***** Latest Episodes Area Start ***** -->
-  <section class="poca-latest-epiosodes" style="padding-top: 30px;">
-    <!-- Categoria Menu -->
-    <!-- <div class="container">
-      <div class="poca-projects-menu mb-30 wow fadeInUp" data-wow-delay="0.3s">
-        <div class="text-center portfolio-menu">
-        </div>
-      </div>
-    </div> -->
-    
+  <section class="poca-latest-epiosodes" style="padding-top: 30px;">    
     <div class="container">
-      
       <!-- Projects Menu -->
       <div class="container">
         <div class="poca-projects-menu mb-30 wow fadeInUp" data-wow-delay="0.3s">
@@ -1425,15 +1402,10 @@
             <h4 class="widget-title">Siga-nos</h4>
             <!-- Social Info -->
             <div class="footer-social-info">
-              <a href="#" class="facebook" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a>
-              <a href="#" class="instagram" data-toggle="tooltip" data-placement="top" title="Instagram"><i class="fa fa-instagram"></i></a>
-              <a href="#" class="youtube" data-toggle="tooltip" data-placement="top" title="YouTube"><i class="fa fa-youtube-play"></i></a>
+              <a target="_blank" href="https://www.facebook.com/JuntosVamosMaisLonge2017" class="facebook" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a>
+              <a target="_blank" href="https://www.instagram.com/juntosvamosmaislonge" class="instagram" data-toggle="tooltip" data-placement="top" title="Instagram"><i class="fa fa-instagram"></i></a>
+              <a target="_blank" href="https://www.youtube.com/channel/UCXB4PYfl74P6pDZPFwWyVbg" class="youtube" data-toggle="tooltip" data-placement="top" title="YouTube"><i class="fa fa-youtube-play"></i></a>
             </div>
-            <!-- App Download Button -->
-            <!-- <div class="app-download-button mt-30">
-              <a href="#"><img src="./img/core-img/app-store.png" alt=""></a>
-              <a href="#"><img src="./img/core-img/google-play.png" alt=""></a>
-            </div> -->
           </div>
         </div>
 
