--- a/playlist.html
+++ b/playlist.html
@@ -143,7 +143,7 @@
               <h5>David Quinlan</h5>
               <div class="music-meta-data lp_font">
                   <p> <a href="#" class="music-author">Tom: G</a> | 
-                      <a href="#" class="music-catagory" data-toggle="modal" data-target="#modalCifra">Cifras</a> | 
+                      <a href="#" class="music-catagory modalCifra" data-toggle="modal" data-target="#modalCifra" data-embed="david-quinlan/abraca-me/">Cifras</a> |
                       <a href="#" class="music-duration">Letra</a></p>
               </div>
             </div>
@@ -1432,10 +1432,18 @@
         </button>
       </div>
       <div class="modal-body text-center">
-          <!-- <iframe name=cifraclub src=https://www.cifraclub.com.br/david-quinlan/abraca-me/imprimir.html width=100% height=500px frameborder=0 scrolling=auto> -->
-          <!-- </iframe> -->
-          <iframe name=cifraclub src=https://www.cifraclub.com.br/david-quinlan/abraca-me/ width=100% height=500px frameborder=0 scrolling=auto>
-          </iframe>
+        <div class="modal_cifra">
+          <!-- <div> -->
+
+          <!-- </div> -->
+          <!-- teste -->
+        </div>
+          <!-- <iframe name=cifraclub src=https://www.cifraclub.com.br/david-quinlan/abraca-me/imprimir.html width=100% height=500px frameborder=0 scrolling=auto>
+          </iframe> -->
+          <!-- <iframe name=cifraclub src=https://www.cifraclub.com.br/david-quinlan/abraca-me/ width=100% height=500px frameborder=0 scrolling=auto>
+          </iframe> -->
+          <!-- <iframe name=cifraclub src=https://m.cifraclub.com.br/david-quinlan/abraca-me/ width=100% height=500px frameborder=0 scrolling=auto>
+          </iframe> -->
       </div>
     </div>
   </div>
