--- a/playlist.html
+++ b/playlist.html
@@ -61,12 +61,10 @@
                   </ul>
 
                   <!-- Top Social Area -->
-                <div class="top-social-area">
-                  <a href="#" class="fa fa-facebook" aria-hidden="true"></a>
-                  <a href="#" class="fa fa-twitter" aria-hidden="true"></a>
-                  <a href="#" class="fa fa-pinterest" aria-hidden="true"></a>
-                  <a href="#" class="fa fa-instagram" aria-hidden="true"></a>
-                  <a href="#" class="fa fa-youtube-play" aria-hidden="true"></a>
+                <div class="top-social-area" style="margin-left: 20px;">
+                  <a target="_blank" href="https://www.facebook.com/JuntosVamosMaisLonge2017" class="fa fa-facebook" aria-hidden="true"></a>
+                  <a target="_blank" href="https://www.instagram.com/juntosvamosmaislonge" class="fa fa-instagram" aria-hidden="true"></a>
+                  <a target="_blank" href="https://www.youtube.com/channel/UCXB4PYfl74P6pDZPFwWyVbg" class="fa fa-youtube-play" aria-hidden="true"></a>
                 </div>
               </div>
               <!-- Nav End -->
