--- a/contato.html
+++ b/contato.html
@@ -59,6 +59,13 @@
                   <li><a href="./sobre.html">Sobre nós</a></li>
                   <li class="current-item"><a href="./contato.html">Contato</a></li>
                   </ul>
+
+                  <!-- Top Social Area -->
+                <div class="top-social-area" style="margin-left: 20px;">
+                    <a target="_blank" href="https://www.facebook.com/JuntosVamosMaisLonge2017" class="fa fa-facebook" aria-hidden="true"></a>
+                    <a target="_blank" href="https://www.instagram.com/juntosvamosmaislonge" class="fa fa-instagram" aria-hidden="true"></a>
+                    <a target="_blank" href="https://www.youtube.com/channel/UCXB4PYfl74P6pDZPFwWyVbg" class="fa fa-youtube-play" aria-hidden="true"></a>
+                  </div>
               </div>
               <!-- Nav End -->
               </div>
@@ -84,7 +91,7 @@
         <div class="col-12">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#"><i class="fa fa-home"></i> Inicio</a></li>
+              <li class="breadcrumb-item"><a href="./index.html"><i class="fa fa-home"></i> Inicio</a></li>
               <li class="breadcrumb-item active" aria-current="page">Contato</li>
             </ol>
           </nav>
@@ -100,7 +107,7 @@
       <div class="row">
         <div class="col-12">
           <div class="google-maps mb-100">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11956.9355465873!2d24.0768412544878!3d56.9550599906977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eecfb0e5073ded%3A0x400cfcd68f2fe30!2z4Kaw4Ka_4KaX4Ka-LCDgprLgp43gpq_gpr7gpp_gp43gpq3gpr_gpoY!5e0!3m2!1sbn!2sbd!4v1543911160102"
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14830.693477534289!2d-49.7662044!3d-21.6765599!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x19f25d04e341284f!2sIgreja+Evangelho+Quadrangular!5e0!3m2!1spt-BR!2sbr!4v1558399853725!5m2!1spt-BR!2sbr"
               allowfullscreen></iframe>
           </div>
         </div>
