--- a/sobre.html
+++ b/sobre.html
@@ -59,6 +59,13 @@
                   <li class="current-item"><a href="./sobre.html">Sobre nós</a></li>
                   <li><a href="./contato.html">Contato</a></li>
                   </ul>
+
+                  <!-- Top Social Area -->
+                <div class="top-social-area" style="margin-left: 20px;">
+                  <a target="_blank" href="https://www.facebook.com/JuntosVamosMaisLonge2017" class="fa fa-facebook" aria-hidden="true"></a>
+                  <a target="_blank" href="https://www.instagram.com/juntosvamosmaislonge" class="fa fa-instagram" aria-hidden="true"></a>
+                  <a target="_blank" href="https://www.youtube.com/channel/UCXB4PYfl74P6pDZPFwWyVbg" class="fa fa-youtube-play" aria-hidden="true"></a>
+                </div>
               </div>
               <!-- Nav End -->
               </div>
