--- a/galeria.html
+++ b/galeria.html
@@ -85,7 +85,7 @@
     </div>
   </div>
 </div>
-<!-- <div class="breadcumb--con">
+<div class="breadcumb--con">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -98,11 +98,11 @@
       </div>
     </div>
   </div>
-</div> -->
+</div>
 <!-- ***** Breadcrumb Area End ***** -->
 
   <!-- ***** Latest Episodes Area Start ***** -->
-  <section class="poca-latest-epiosodes" style="padding-top: 50px;">
+  <section class="poca-latest-epiosodes">
     <!-- <div class="container">
       <div class="row">
         Section Heading
@@ -131,7 +131,7 @@
     <div class="container">
       <div class="row poca-portfolio">
         <!-- Single gallery Item -->
-        <div class="col-12 col-md-6 single_gallery_item entre wow fadeInUp" data-wow-delay="0.2s">
+        <div class="col-12 col-md-4 single_gallery_item entre wow fadeInUp" data-wow-delay="0.2s">
           <!-- Welcome Music Area -->
           <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
             <div class="poca-music-thumbnail">
@@ -141,7 +141,7 @@
         </div>
 
         <!-- Single gallery Item -->
-        <div class="col-12 col-md-6 single_gallery_item entre wow fadeInUp" data-wow-delay="0.2s">
+        <div class="col-12 col-md-4 single_gallery_item entre wow fadeInUp" data-wow-delay="0.2s">
           <!-- Welcome Music Area -->
           <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
             <div class="poca-music-thumbnail">
