--- a/sobre.html
+++ b/sobre.html
@@ -102,7 +102,7 @@
   <!-- ***** Breadcrumb Area End ***** -->
 
   <!-- ****** About Us Area Start ******* -->
-  <section class="about-us-area section-padding-0-80 mt-50">
+  <section class="about-us-area section-padding-0-80">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12 col-lg-10">
