--- a/contato.html
+++ b/contato.html
@@ -102,7 +102,7 @@
   <!-- ***** Breadcrumb Area End ***** -->
 
   <!-- ***** Contact Area Start ***** -->
-  <section class="poca-contact-area mb-100">
+  <section class="poca-contact-area mb-30">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -118,16 +118,15 @@
         <div class="col-12 col-md-6">
           <div class="contact-information">
             <div class="contact-heading mb-50">
-              <h2>Contact Info</h2>
-              <h6>We will be happy to assist you with any question</h6>
-              <p>Lorem ipsum dolor sit amet, consetetur sadipscing esed diam nonumy eirmod tempor invidunt ut labore et dolore magna. Integer vehicula mauris libero, at molestie eros imperdiet sit amet. Suspendisse mattis ante sit amet ante.</p>
+              <h2>Contato</h2>
+              <p>Entre em contato conosco em nossas redes sociais</p>              
+                <div class="single-footer-widget mt-30">
+                  <div class="footer-social-info">
+                      <a target="_blank" href="https://www.facebook.com/JuntosVamosMaisLonge2017" class="facebook btn poca-btn btn-2 m-1 ml-0"><i class="fa fa-facebook"></i> FACEBOOK</a>
+                      <a target="_blank" href="https://www.instagram.com/juntosvamosmaislonge" class="instagram btn poca-btn btn-2 m-1 ml-0"><i class="fa fa-instagram"></i> INSTAGRAM</a>
+                  </div>
+                </div>
             </div>
-
-
-            <h5>Address: 40 Baria Sreet 133/2 NewYork City, US</h5>
-            <h5>Phone: +01-3-8888-6868</h5>
-            <h5>Email: info@colorlib.com </h5>
-            <h5>Open Hours: Mon - Fri: 8:00 AM to 6:00 PM</h5>
           </div>
         </div>
 
@@ -135,58 +134,16 @@
         <div class="col-12 col-md-6">
           <div class="contact-form">
             <div class="contact-heading">
-              <h2>Get In Touch</h2>
-              <h5>Don't hesitate to contact us</h5>
+              <h2>Endereço</h2>
             </div>
-            <!-- Form -->
-            <form action="#" method="post">
-              <div class="row">
-                <div class="col-12">
-                  <input type="text" name="message-name" class="form-control mb-30" placeholder="Your Name">
-                </div>
-                <div class="col-12">
-                  <input type="email" name="message-email" class="form-control mb-30" placeholder="Your Email">
-                </div>
-                <div class="col-12">
-                  <textarea name="message" class="form-control mb-30" placeholder="Your Message"></textarea>
-                </div>
-                <div class="col-12">
-                  <button type="submit" class="btn poca-btn">Send Message</button>
-                </div>
-              </div>
-            </form>
-
+            <h5>Rua dos Democratas nº 45 - Labate - Lins</h5>
+            <h5>Todos os Sábados a partir das 20h</h5>
           </div>
         </div>
       </div>
     </div>
   </section>
   <!-- ***** Contact Area End ***** -->
-
-  <!-- ***** Newsletter Area Start ***** -->
-  <section class="poca-newsletter-area bg-img bg-overlay pt-50 jarallax" style="background-image: url(img/bg-img/15.jpg);">
-    <div class="container">
-      <div class="row align-items-center">
-        <!-- Newsletter Content -->
-        <div class="col-12 col-lg-6">
-          <div class="newsletter-content mb-50">
-            <h2>Sign Up To Newsletter</h2>
-            <h6>Subscribe to receive info on our latest news and episodes</h6>
-          </div>
-        </div>
-        <!-- Newsletter Form -->
-        <div class="col-12 col-lg-6">
-          <div class="newsletter-form mb-50">
-            <form action="#" method="post">
-              <input type="email" name="nl-email" class="form-control" placeholder="Your Email">
-              <button type="submit" class="btn">Subscribe</button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- ***** Newsletter Area End ***** -->
 
   <!-- ***** Footer Area Start ***** -->
   <footer class="footer-area" style="padding-top:30px;">
