--- a/playlist.html
+++ b/playlist.html
@@ -1424,7 +1424,7 @@
   <!-- ***** Latest Episodes Area End ***** -->
 
   <!-- Teste filtrar itens pela pesquisa -->
-  <!-- <div class="col-12">
+  <div class="col-12">
       <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
 
       <ul id="myUL">
@@ -1438,7 +1438,7 @@
         <li><a href="#">Christina</a></li>
         <li><a href="#">Cindy</a></li>
       </ul>
-  </div> -->
+  </div>
   <!-- Fim Teste filtrar itens pela pesquisa -->
 
   <!-- ***** Footer Area Start ***** -->
