--- a/galeria.html
+++ b/galeria.html
@@ -129,7 +129,17 @@
     </div> -->
 
     <div class="container">
+      <div class="row">
+        <!-- Section Heading -->
+        <div class="col-12">
+          <div class="section-heading text-center">
+            <h2>Fotos</h2>
+            <div class="line"></div>
+          </div>
+        </div>
+      </div>
       <div class="row poca-portfolio">
+
         <!-- Single gallery Item -->
         <div class="col-12 col-md-4 single_gallery_item entre wow fadeInUp" data-wow-delay="0.2s">
           <!-- Welcome Music Area -->
@@ -149,9 +159,33 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <!-- Section Heading -->
+        <div class="col-12">
+          <div class="section-heading text-center">
+            <h2>Videos</h2>
+            <div class="line"></div>
+          </div>
+        </div>
+      </div>
 
 
-
+      <!-- Single gallery Item -->
+      <div class="col-12 col-md-4 single_gallery_item letra_A wow fadeInUp" data-wow-delay="0.2s">
+        <!-- Welcome Music Area -->
+        <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+          <div class="poca-music-thumbnail">
+            <!-- video wrapper -->
+            <div class="youtube_img" data-embed="2A31JX6XUM8"> 
+              <!-- "play" button -->
+              <div class="play-button"></div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -270,6 +304,8 @@
   <script src="js/poca.bundle.js"></script>
   <!-- Active js -->
   <script src="js/default-assets/active.js"></script>
+  <!-- Style -->
+  <script src="style.js"></script>
 
 </body>
 
