--- a/galeria.html
+++ b/galeria.html
@@ -102,7 +102,7 @@
 
   <!-- ***** Latest Episodes Area Start ***** -->
   <section class="poca-latest-epiosodes mb-70">
-    <div class="container">
+    <div class="container mb-30">
       <div class="row">
         <!-- Section Heading -->
         <div class="col-12">
