--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="description" content="Louvor Jovens 2º IEQ Lins">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<!-- sadas -->
   <!-- Title -->
   <title>Louvor Jovens 2º IEQ</title>
 
@@ -98,10 +97,8 @@
             <!-- Single Featured Guest -->
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
               <div class="single-featured-guest">
-                <!-- <img src="img/bg-img/25.jpg" alt=""> -->
                 <div class="guest-info">
                   <h5>LOUVOR</h5>
-                  <!-- <span>PRODUCER</span> -->
                 </div>
               </div>
             </div>
@@ -109,10 +106,8 @@
             <!-- Single Featured Guest -->
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
               <div class="single-featured-guest">
-                <!-- <img src="img/bg-img/25.jpg" alt=""> -->
                 <div class="guest-info">
                   <h5>ADORAÇÃO</h5>
-                  <!-- <span>PRODUCER</span> -->
                 </div>
               </div>
             </div>
@@ -120,10 +115,8 @@
             <!-- Single Featured Guest -->
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
               <div class="single-featured-guest">
-                <!-- <img src="img/bg-img/25.jpg" alt=""> -->
                 <div class="guest-info">
                   <h5>PALAVRA</h5>
-                  <!-- <span>PRODUCER</span> -->
                 </div>
               </div>
             </div>
@@ -133,10 +126,8 @@
             <!-- Single Featured Guest -->
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
               <div class="single-featured-guest mb-50">
-                <!-- <img src="img/bg-img/25.jpg" alt=""> -->
                 <div class="guest-info">
                   <h5>COMUNHÃO</h5>
-                  <!-- <span>PRODUCER</span> -->
                 </div>
               </div>
             </div>
@@ -144,10 +135,8 @@
             <!-- Single Featured Guest -->
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
               <div class="single-featured-guest mb-50">
-                <!-- <img src="img/bg-img/25.jpg" alt=""> -->
                 <div class="guest-info">
                   <h5>FAMÍLIA</h5>
-                  <!-- <span>PRODUCER</span> -->
                 </div>
               </div>
             </div>
@@ -161,6 +150,63 @@
   </div>
 </section>
 <!-- ***** Latest Episodes Area End ***** -->
+
+ <!-- ***** Footer Area Start ***** -->
+ <footer class="footer-area">
+    
+  <div class="section-heading text-center">
+    <div class="line" style="width:90%; height:2px;"></div>
+  </div>
+  
+  <div class="container">
+    <div class="row">
+
+      <!-- Single Footer Widget -->
+      <div class="col-12 col-sm-12 col-lg-4">
+        <div class="single-footer-widget mb-80">
+          <!-- Widget Title -->
+          <h4 class="widget-title">Sobre</h4>
+
+          <p>Todos os Sábados, a partir das 20h nós ministramos o louvor no Culto de Jovens da 2º Igreja do Evanjelho Quadrangular de Lins. <a data-toggle="tooltip" data-placement="top" title="Ver no Mapa" target="_blank" href="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14830.693477534289!2d-49.7662044!3d-21.6765599!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x19f25d04e341284f!2sIgreja+Evangelho+Quadrangular!5e0!3m2!1spt-BR!2sbr!4v1558399853725!5m2!1spt-BR!2sbr" class="fa fa-map-marker" aria-hidden="true"></a></p>
+          
+        </div> 
+      </div>
+
+      <!-- Single Footer Widget -->
+      <div class="col-12 col-sm-12 col-lg-4">
+        <div class="single-footer-widget mb-80">
+          <!-- Widget Title -->
+          <h4 class="widget-title">Paginas</h4>
+          <!-- Catagories Nav -->
+          <nav>
+            <div class="catagories-nav">
+              <a href="./index.html" style="margin-right:10%;">Inicio</a>
+              <a href="./playlist.html" style="margin-right:10%;">Playlist</a>
+              <a href="./galeria.html" style="margin-right:10%;">Galeria</a>
+              <a href="./contato.html" style="margin-right:10%;">Contato</a>
+            </div>
+          </nav>
+        </div>
+      </div>
+
+      <!-- Single Footer Widget -->
+      <div class="col-12 col-sm-12 col-lg-4">
+        <div class="single-footer-widget mb-80">
+          <!-- Widget Title -->
+          <h4 class="widget-title">Siga-nos</h4>
+          <!-- Social Info -->
+          <div class="footer-social-info">
+            <a target="_blank" href="https://www.facebook.com/JuntosVamosMaisLonge2017" class="facebook" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a>
+            <a target="_blank" href="https://www.instagram.com/juntosvamosmaislonge" class="instagram" data-toggle="tooltip" data-placement="top" title="Instagram"><i class="fa fa-instagram"></i></a>
+            <a target="_blank" href="https://www.youtube.com/channel/UCXB4PYfl74P6pDZPFwWyVbg" class="youtube" data-toggle="tooltip" data-placement="top" title="YouTube"><i class="fa fa-youtube-play"></i></a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</footer>
+<!-- ***** Footer Area End ***** -->
 
   <!-- ******* All JS ******* -->
   <!-- jQuery js -->
