Ajuste frase Pagina Inicial

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           </div>
 
           <p>Todos os Sábados, a partir das 20h nós ministramos o louvor no Culto de Jovens da 2º Igreja do Evanjelho Quadrangular de Lins.</p>
-          <p>Venha prestigiar conosco e traga mais um com você!</p>
+          <p>Venha prestigiar conosco e traga mais um com você! Deus Abençoe!!</p>
           <p>#MaiorÉOQueServe #AnoDaHonra #JuntosVamosMaisLonge</p>
       </div>
     </div>
